--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,41 @@
+@import url(./assets/fonts/fonts.css);
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
+  color: #000;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  min-width: 375px;
+  max-width: 400px;
+  margin: auto;
+  overflow: hidden;
+  background-color: #FBFBFB;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 700px) and (orientation: landscape) {
+  #root {
+    height: 95vh;
+    border-radius: 20px;
+    border: 5px solid #666;
   }
-  to {
-    transform: rotate(360deg);
+
+  body {
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    width: 100%;
+    height: 100vh;
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
