--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@
   color: #000;
 }
 
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   min-width: 375px;
   max-width: 400px;
@@ -24,6 +29,10 @@
 
 
 @media screen and (min-width: 700px) and (orientation: landscape) {
+  #root {
+    padding: 2.5vh 0 2.5vh 0;
+  }
+
   .container {
     height: 95vh;
     border-radius: 20px;
