--- a/src/components/Area/Area.css
+++ b/src/components/Area/Area.css
@@ -184,7 +184,6 @@ canvas.active {
 
 /*===area-room 3.3===*/
 .room {
-    display: none;
     transform: skewX(45deg) skewY(330deg);
     transform-origin: center center;
     position: absolute;
@@ -193,7 +192,15 @@ canvas.active {
     transform-style: preserve-3d;
 }
 
+.room.error img {
+    filter: drop-shadow(0px 0px 12px #FF6868);
+}
 
+.room.success img {
+    filter: drop-shadow(0px 0px 12px #86EF8C);
+}
+
+/* 
 .modal__room {
     position: absolute;
     transform: skewX(0deg) skewY(5deg) scale(1) translateX(70px) translateY(-120px) translateZ(10px);
@@ -223,7 +230,7 @@ canvas.active {
 .modal__room .modal__text {
     font-weight: 400;
     font-size: 16px;
-}
+} */
 
 
 
