--- a/src/components/Client/Client.css
+++ b/src/components/Client/Client.css
@@ -42,3 +42,37 @@
 .client__services.none {
     display: none;
 }
+
+.stopGame {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+}
+
+.modal__room {
+    position: absolute;
+    top: 300px;
+    left: 100px;
+}
+
+.modal__room h3 {
+    position: relative;
+    z-index: 4;
+    font-size: 12px;
+    margin-bottom: 2px;
+    font-family: Montserrat;
+}
+
+.modal__room span {
+    position: relative;
+    z-index: 4;
+    font-family: Montserrat;
+}
+
+.modal__room .modal::after,
+.modal__room .modal::before {
+    z-index: 2;
+}
