--- a/src/components/Client/Client.css
+++ b/src/components/Client/Client.css
@@ -43,14 +43,15 @@
     display: none;
 }
 
-.stopGame {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 999;
+.client.success {
+    filter: drop-shadow(0px 0px 12px #4FFF59);
 }
+
+.client.error {
+    filter: drop-shadow(0px 0px 12px #FF4F4F);
+}
+
+
 
 .modal__room {
     position: absolute;
