--- a/src/components/ClientsArea/ClientsArea.css
+++ b/src/components/ClientsArea/ClientsArea.css
@@ -3,5 +3,6 @@
     grid-template-columns: repeat(4, 64px);
     justify-content: space-between;
     padding: 0px 16px 16px 16px;
-    min-height: 168px;
+    height: 178px;
+    align-items: end;
 }
