--- a/src/components/Area/Area.css
+++ b/src/components/Area/Area.css
@@ -146,6 +146,10 @@
     z-index: 6;
 }
 
+.area__makeup-table.noWait {
+    display: none;
+}
+
 .area__makeup-table.error img {
     filter: drop-shadow(0px 0px 12px #FF6868);
 }
@@ -184,12 +188,17 @@ canvas.active {
 
 /*===area-room 3.3===*/
 .room {
+    display: block;
     transform: skewX(45deg) skewY(330deg);
     transform-origin: center center;
     position: absolute;
     bottom: 34px;
     right: -15px;
     transform-style: preserve-3d;
+}
+
+.room.noWait {
+    display: none;
 }
 
 .room.error img {
@@ -551,10 +560,10 @@ canvas.active {
 
 .squareCare div.right {
     transform: skewX(0deg) skewY(45deg);
-    top: 63px;
-    left: 40px;
-    height: 201px;
-    width: 190px;
+    top: 65px;
+    left: 38px;
+    height: 198px;
+    width: 193px;
 }
 
 .squareCare div.front {
