--- a/src/components/Client/Client.css
+++ b/src/components/Client/Client.css
@@ -34,8 +34,9 @@
 
 .client__photo img {
     position: absolute;
-    top: 5px;
-    left: 8px;
+    top: 55%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
 
 .client__services.none {
@@ -94,4 +95,42 @@
 .client.dangerTime .client__lives span {
     background-color: #D3CA75;
 
+}
+
+
+/* иконки клиентов */
+.icon2 img {
+    top: 5px;
+    left: 11px;
+    transform: none;
+}
+
+.icon3 img {
+    top: 50%;
+    left: 50%;
+    transform: translateY(-40%) translateX(-40%) scale(1.2);
+}
+
+.icon01 img {
+    top: 5px;
+    left: 7px;
+    transform: none;
+}
+
+.icon22 img {
+    top: 7px;
+    left: 11px;
+    transform: none;
+}
+
+.icon52 img {
+    top: 5px;
+    left: 5px;
+    transform: none;
+}
+
+.icon73 img {
+    top: 5px;
+    left: 14px;
+    transform: none;
 }
