--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   font-family: "Montserrat";
   color: #000;
   user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 #root {
@@ -26,6 +27,7 @@
   justify-content: space-between;
   position: relative;
   min-height: 660px;
+  box-sizing: content-box;
 
 }
 
