--- a/src/components/utils/Test/Test.css
+++ b/src/components/utils/Test/Test.css
@@ -148,7 +148,8 @@
     color: #fff;
 }
 
-.nameTask1::placeholder {
+.nameTask1::placeholder,
+.nameTask1::-webkit-input-placeholder {
     color: #424242;
     text-align: center;
     font-family: Montserrat;
@@ -165,6 +166,7 @@
     top: 0;
     left: 0;
     background: #DBDBDB;
+    border-radius: 4px;
 
 }
 
