--- a/src/components/utils/Test/Test.css
+++ b/src/components/utils/Test/Test.css
@@ -139,13 +139,12 @@
     font-style: normal;
     font-weight: 400;
     line-height: 120%;
-    background: #fff;
+    background: #DBDBDB;
 
 }
 
-.nameTask1:focus::placeholder {
+.nameTask1:focus {
     background: #fff;
-    color: #fff;
 }
 
 .nameTask1::placeholder,
@@ -157,16 +156,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 120%;
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: #DBDBDB;
-    border-radius: 4px;
 
 }
 
