--- a/src/components/Tasks/Task4/Consultants/Consultants.css
+++ b/src/components/Tasks/Task4/Consultants/Consultants.css
@@ -13,6 +13,7 @@
     filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.12));
     position: relative;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .cons__img {
