--- a/src/components/Tasks/Task4/Consultants/Consultants.css
+++ b/src/components/Tasks/Task4/Consultants/Consultants.css
@@ -6,18 +6,22 @@
     gap: 12px;
 }
 
+.cons__wrap {
+    position: relative;
+}
+
 .cons {
     width: 64px;
     height: 64px;
     border-radius: 50%;
     filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.12));
-    position: relative;
     overflow: hidden;
     cursor: pointer;
 }
 
 .cons__img {
-
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 5px;
     left: 0px;
@@ -41,5 +45,5 @@
     opacity: 1;
     top: 0px;
     right: -10px;
-    z-index: 2;
+    z-index: 99;
 }
