--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+
+  @media not all and (hover:hover) {
+    height: var(--app-height);
+  }
 }
 
 .container {
@@ -51,6 +55,13 @@
     justify-self: center;
     width: 100%;
     height: 100vh;
+  }
+
+}
+
+@media (max-height: 660px) {
+  .container {
+    margin-top: -10px;
   }
 
 }
