--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,8 @@
 #root {
   width: 100vw;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   overflow: hidden;
-
-  @media not all and (hover:hover) {
-    height: var(--app-height);
-  }
 }
 
 .container {
@@ -32,7 +29,7 @@
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  min-height: 660px;
+  min-height: 650px;
   box-sizing: content-box;
 
 }
