--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   margin: auto;
   overflow: hidden;
   background-color: #FBFBFB;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
