--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,15 @@
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
+  flex: 1 0 auto;
   min-width: 375px;
   max-width: 400px;
-  margin: auto;
   overflow: hidden;
   background-color: #FBFBFB;
   height: 100%;
